<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="60dp"
    tools:context=".SetActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="40sp"
        android:text="@string/settings_text"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:fontFamily="@font/albert_sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/timer_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timer_switch_text"
        android:fontFamily="@font/albert_sans"
        android:textSize="20sp"
        android:theme="@style/mySwitch"
        android:textColor="@color/text_color"
        android:paddingVertical="5dp"
        android:paddingHorizontal="40dp"
        android:checked="true"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="417dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sound_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/sound_switch_text"
        android:fontFamily="@font/albert_sans"
        android:theme="@style/mySwitch"
        android:textColor="@color/text_color"
        android:paddingVertical="5dp"
        android:paddingHorizontal="40dp"
        android:checked="true"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="417dp" />

    <Button
        android:id="@+id/set_btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:textSize="20dp"
        android:fontFamily="@font/albert_sans"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/set_btn_about" />
    <Button
        android:id="@+id/set_btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:textSize="20dp"
        android:fontFamily="@font/albert_sans"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/set_btn_reset" />
    <Button
        android:id="@+id/set_btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:textSize="20dp"
        android:fontFamily="@font/albert_sans"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/set_btn_back" />
</LinearLayout>