<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="80dp"
    tools:context=".WinActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/win_text"/>

    <TextView
        android:id="@+id/win_time_text"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Time: 99:99"
        android:gravity="center"/>

    <TextView
        android:id="@+id/win_turns_text"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Turns: 314159"
        android:layout_marginBottom="80dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/win_btn_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/main_btn_start" />
    <Button
        android:id="@+id/win_btn_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/main_btn_exit" />


</LinearLayout>